name:                ruHaskell
version:             0.2.0.0
synopsis:            Website of Russian community of Haskell-developers

homepage:            http://ruhaskell.org

license: 	     MIT
license-file:        LICENSE

author:              Denis Shevchenko
maintainer:          me@dshevchenko.biz

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

executable ruHaskell
  main-is:             Main.hs

  hs-source-dirs:      src

  other-modules:       About
                       Archive
                       Context
                       Copiers
                       Css.Own
                       IndexPage
                       Links
                       Markup.About
                       Markup.Archive
                       Markup.Authors
                       Markup.Categories
                       Markup.Default
                       Markup.Footer
                       Markup.Head
                       Markup.Index
                       Markup.Links
                       Markup.Post
                       Markup.PostList
                       Markup.Posts
                       Markup.Sitemap
                       Markup.Tags
                       Misc
                       Posts
                       RSSFeed
                       Tags
                       XMLMap

  build-depends:       aeson
                     , base
                     , blaze-html
                     , clay
                     , containers
                     , filepath
                     , hakyll
                     , mtl
                     , pandoc
                     , split
                     , string-qq
                     , text
                     , time
                     , unordered-containers

  default-language:    Haskell2010

  ghc-options:         -Wall
